# adapter/handler.go
@@ -1,7 +1,10 @@
 package adapter
 
 import (
+	"fmt"
+
 	"github.com/fdk-refarch-eda/order-service/order-command-service/domain"
+	"github.com/go-playground/validator/v10"
 )
 
 // OrderHandler type
@@ -9,11 +12,23 @@ type OrderHandler struct {
 	Service *domain.ShippingOrderService
 }
 
+var validate *validator.Validate = validator.New()
+
 // CreateOrder handler
-func (orderHandler OrderHandler) CreateOrder(createOrderRequest CreateOrderRequest) CreateOrderResponse {
+func (orderHandler OrderHandler) CreateOrder(createOrderRequest CreateOrderRequest) (CreateOrderResponse, *ErrorResponse) {
+	if err := validate.Struct(createOrderRequest); err != nil {
+		errors := []Error{}
+		for _, e := range err.(validator.ValidationErrors) {
+			errors = append(errors, Error{
+				Message: fmt.Sprintf("Value %v for field %s is invalid.", e.Value(), e.Field()),
+			})
+		}
+		return CreateOrderResponse{}, &ErrorResponse{Errors: errors}
+	}
+
 	order := toShippingOrder(createOrderRequest)
 	orderHandler.Service.CreateOrder(&order)
-	return toCreateOrderResponse(order)
+	return toCreateOrderResponse(order), nil
 }
 
 // UpdateOrder handler
